[gd_scene load_steps=20 format=3 uid="uid://dxobcc5qh5xup"]

[ext_resource type="Texture2D" uid="uid://c7ljtt45iuj8d" path="res://UI/Logos/red_riding_hood.png" id="1_jhuqf"]
[ext_resource type="PackedScene" uid="uid://cs3kgmdfvajq5" path="res://Objects/campfire.tscn" id="1_v70ry"]
[ext_resource type="Script" path="res://UI/MainMenu/MainMenu.gd" id="1_vqno1"]
[ext_resource type="Shader" path="res://Shaders/chromatic_abberation.gdshader" id="2_t5vo4"]
[ext_resource type="FontFile" uid="uid://3r5i3edjcxtf" path="res://UI/Fonts/quan.ttf" id="2_undsf"]
[ext_resource type="Theme" uid="uid://cudo7s2c2570a" path="res://UI/MainMenu/button_theme.tres" id="3_gihyp"]
[ext_resource type="Texture2D" uid="uid://bneupdsg5xw2b" path="res://Objects/Textures/sky.png" id="4_46e8d"]
[ext_resource type="Script" path="res://UI/MainMenu/MenuButtons.gd" id="4_b132q"]
[ext_resource type="PackedScene" uid="uid://car0pwqmf44x8" path="res://UI/OptionsMenu/options_menu.tscn" id="6_og5x7"]
[ext_resource type="PackedScene" uid="uid://d0wwm0pyn6txx" path="res://UI/Credits/credits.tscn" id="7_dqepe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ei5x8"]
shader = ExtResource("2_t5vo4")
shader_parameter/levels = 3
shader_parameter/spread = -0.1

[sub_resource type="Theme" id="Theme_78340"]
VBoxContainer/constants/separation = -5

[sub_resource type="LabelSettings" id="LabelSettings_wqxrp"]
font = ExtResource("2_undsf")
font_size = 8
font_color = Color(0.317647, 0.317647, 0.317647, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_y6obo"]
panorama = ExtResource("4_46e8d")

[sub_resource type="Sky" id="Sky_0k00l"]
sky_material = SubResource("PanoramaSkyMaterial_y6obo")

[sub_resource type="Environment" id="Environment_45s6r"]
background_mode = 2
sky = SubResource("Sky_0k00l")
tonemap_mode = 2
ssao_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_sky_affect = 0.7
volumetric_fog_enabled = true
volumetric_fog_sky_affect = 0.8

[sub_resource type="Animation" id="Animation_53s6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Campfire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_67axm"]
resource_name = "enter_animation"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Campfire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8loc"]
_data = {
"RESET": SubResource("Animation_53s6x"),
"enter_animation": SubResource("Animation_67axm")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_vqno1")

[node name="ChromaticAbberation" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ei5x8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Logo" type="TextureRect" parent="UI"]
layout_mode = 0
anchor_left = 0.025
anchor_top = 0.0444444
anchor_right = 0.215625
anchor_bottom = 0.372222
texture = ExtResource("1_jhuqf")
metadata/_edit_use_anchors_ = true

[node name="MenuButtons" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0125
anchor_top = 0.577778
anchor_right = 0.134375
anchor_bottom = 0.977778
theme = SubResource("Theme_78340")
alignment = 2
script = ExtResource("4_b132q")
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="UI/MenuButtons"]
layout_mode = 2
theme = ExtResource("3_gihyp")
text = "play"
alignment = 0

[node name="OptionsButton" type="Button" parent="UI/MenuButtons"]
layout_mode = 2
theme = ExtResource("3_gihyp")
text = "options"
alignment = 0

[node name="CreditsButton" type="Button" parent="UI/MenuButtons"]
layout_mode = 2
theme = ExtResource("3_gihyp")
text = "credits"
alignment = 0

[node name="ExitButton" type="Button" parent="UI/MenuButtons"]
layout_mode = 2
theme = ExtResource("3_gihyp")
text = "quit"
alignment = 0

[node name="Copyright" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.872222
anchor_right = 0.978125
anchor_bottom = 0.977778
text = "v0.1.1
Â© oschl 2024"
label_settings = SubResource("LabelSettings_wqxrp")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[node name="OptionsMenu" parent="." instance=ExtResource("6_og5x7")]
visible = false

[node name="Credits" parent="." instance=ExtResource("7_dqepe")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.992, 0.762007)
fov = 60.0

[node name="Campfire" parent="." instance=ExtResource("1_v70ry")]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_45s6r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v8loc")
}

[connection signal="pressed" from="UI/MenuButtons/PlayButton" to="UI/MenuButtons" method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/MenuButtons/OptionsButton" to="UI/MenuButtons" method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/MenuButtons/CreditsButton" to="UI/MenuButtons" method="_on_credits_button_pressed"]
[connection signal="pressed" from="UI/MenuButtons/ExitButton" to="UI/MenuButtons" method="_on_exit_button_pressed"]
